<resources>
    <string name="app_name">SMF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bbs">BBS</string>
    <string name="personal">Personal</string>
    <string name="notifications">Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="personalize">Personalize</string>
    <string name="account_settings">Account Settings</string>
    <string name="fragment_personal">fragment_personal</string>
    <string name="fragment_bbs">fragment_bbs</string>
    <string name="fragment_notifications">fragment_notifications</string>
    <string name="fragment_account_settings">fragment_account_settings</string>
    <string name="user_screen_name">Screen Name</string>
    <string name="profile_short_description">A short description, up to 100 characters long.
        A short description, up to 100 characters long. A sh</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="group_screen_name">Group Screen Name</string>
    <string name="group_short_description">A short description, up to 100 characters long.
        A short description, up to 100 characters long. A sh</string>
    <string name="connect">Connect</string>
    <string name="user_search">User Search</string>
    <string name="fragment_user_search">fragment_user_search</string>
    <string name="screen_name">Screen Name</string>
    <string name="thread_title">Title</string>
    <string name="decently_long_text">After taking a glimpse of the 30 man raid today in kTera, I\'m sure we are all hyped up for this exciting new raid! Amaterasu has the numbers and skill to do this without any outside help, and that\'s exactly what we are going to do! We will be reaching for the top and going for the NA first clear of this challenging dungeon! But first we have to prepare. We will launch this in 4 phases, so please keep your eyes and ears open, as this will be here before you know it!</string>
    <string name="character_140">You will all see a thread pop up here soon regarding details of how we plan to tackle the 30 man raid. In this thread, we will have a seri</string>
    <string name="tags">#test #tags #longtagtest #evenlongertagtesttest</string>
    <string name="account_id">accountid</string>
    <string name="account_number">User #0</string>
    <string name="placeholder_post_count">2194 Posts</string>
    <string name="placeholder_followers">659 Followers</string>
    <string name="placeholder_group_name">Group Screen Name</string>
    <string name="placeholder_group_id">groupid</string>
    <string name="placeholder_group_members">36881 Members</string>
    <string name="message_user_names">Screen Name (accountid)</string>
    <string name="message_title">Message Title</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="btn_anonymous_mode">Anonymous Mode</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="edit_short_description">Short Description (max. 100 characters)</string>
    <string name="edit_account_id">Account ID (unique; A–Z and 0–9 only)</string>
    <string name="edit_wallpaper">Edit Wallpaper</string>
    <string name="action_edit_profile_complete">Save Changes</string>
    <string name="invalid_login">Incorrect email or password. Please try again.</string>
    <string name="user_account_id">(accountid)</string>
    <string name="thread_content">Thread content…</string>
    <string name="thread_tags">Tags</string>
    <string name="thread_create">Create New Thread</string>
    <string name="confirm_create_thread">Are you sure you would like to create this thread?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thread_created">Thread created.</string>
    <string name="showthread_btn_reply">Reply</string>
    <string name="reply_create">Reply to Thread</string>
    <string name="reply_content">Your message…</string>
    <string name="confirm_create_post">Are you sure you would like to post this message?</string>
    <string name="reply_created">Message posted.</string>
    <string name="group_create">Create New Group</string>
    <string name="group_id">Group ID</string>
    <string name="group_name">Group Name</string>
    <string name="confirm_create_group">Are you sure you would like to create this group?</string>
    <string name="group_created">Group created.</string>
    <string name="action_join_group">Join Group</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="confirm_join_group">Would you like to join this group?</string>
    <string name="confirm_leave_group">Are you sure you would like to leave this group?</string>
    <string name="group_bbs">BBS</string>
    <string name="group_threads">Threads:</string>
    <string name="group_posts">Posts:</string>
    <string name="group_members">Members:</string>
    <string name="group_last_post">Last post:</string>
    <string name="create_message_recipient">Recipients (separate with comma)</string>
</resources>
