<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bbs"
            android:icon="@drawable/bbs_material_48dp"
            android:title="@string/bbs" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/personal_material_48dp"
            android:title="@string/personal" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications_material_48dp"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/personalize">
        <menu>
            <item
                android:id="@+id/nav_account_settings"
                android:icon="@drawable/account_settings_material_48dp"
                android:title="@string/account_settings" />
        </menu>
    </item>

</menu>
