<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inami.smf.personal.EditProfile">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/edit_name_id_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_screen_name"
                    android:layout_width="match_parent"
                    android:hint="@string/screen_name"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edit_account_id"
                    android:layout_below="@id/edit_screen_name"
                    android:layout_width="match_parent"
                    android:hint="@string/edit_account_id"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/edit_short_description"
                    android:layout_below="@id/edit_account_id"
                    android:layout_width="match_parent"
                    android:hint="@string/edit_short_description"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_below="@id/edit_short_description"
                    android:layout_width="wrap_content"
                    android:text="@string/edit_wallpaper"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:paddingTop="24dp"
                android:layout_below="@id/edit_name_id_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/edit_profile_picture"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:background="@color/colorPrimary"/>
                <GridView
                    android:id="@+id/profile_picture_selection"
                    android:paddingTop="24dp"
                    android:layout_below="@id/edit_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </GridView>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
