<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inami.smf.personal.groups.SingleGroupFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/group_name_description_toolbar"
        android:layout_width="match_parent"
        android:background="@color/darkTint"
        android:padding="2pt"
        android:layout_height="52pt">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/group_screen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:gravity="center"
                android:lines="2"
                android:textColor="@color/white"
                android:text="@string/group_screen_name"
                android:layout_above="@+id/user_account_id"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/group_screen_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:gravity="center"
                android:lines="2"
                android:textColor="@color/white"
                android:text="@string/user_account_id"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/group_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="6pt"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/group_short_description"
                android:layout_below="@+id/group_screen_id"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/group_picture_badges"
        android:layout_below="@id/group_name_description_toolbar"
        android:layout_width="match_parent"
        android:layout_height="115dp">

        <RelativeLayout
            android:layout_toRightOf="@id/group_picture"
            android:id="@+id/group_badges"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/group_picture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/group_picture_badges"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/group_menu"
            android:layout_width="match_parent"
            android:layout_weight="60"
            android:layout_height="match_parent">
        <ListView
            android:id="@+id/group_menu_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="40"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/group_recent_activity"
                android:layout_width="match_parent"
                android:layout_height="14pt"
                android:textSize="10pt"
                android:text="@string/recent_activity"/>
            <ListView
                android:id="@+id/group_activity_list"
                android:layout_below="@id/group_recent_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

